frontend/test/should_pass/index_model_005.gm
node class N
{
	i : int;
}

edge class E
{
	i : int;
}

index unique;
