frontend/test/should_fail/computations_no_assign_func.gm
node class N
{
	x:int;	
}
